--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,8 +1,8 @@
 ---
 :verbose: true
-:concurrency: <%= ENV.fetch('SIDEKIQ_CONCURRENCY') { 5 } %>
+:concurrency: <%= ENV.fetch('SIDEKIQ_CONCURRENCY') { 10 } %>
 :timeout: 25
 
 :queues:
-  - repo_surfer
-  - user_surfer
+  - [repo_surfer, 12]
+  - [user_surfer, 4]
