--- a/.github/workflows/digitalocean.yml
+++ b/.github/workflows/digitalocean.yml
@@ -20,6 +20,7 @@ jobs:
       RAILS_ENV: test
       DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
       RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+      INSTANCE_NAME: github-ci
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
